tests-system/rbt-late-reference-checking/output
ref = Potato
      ^^^^^^ rbt-late-reference-checking/foo.trlc:10: error: unknown symbol Potato
Processed 1 model and 1 requirement file and found 1 error
